# jpquiz

./: Cargo.toml
backend/: CREDITS.md  Cargo.toml  sqlx.toml
backend/.cargo/: config.toml
backend/configuration/: local.yaml
backend/dictionary/: Cargo.toml
backend/dictionary/src/: dictionary.rs  filters.rs  jlpt.rs  jmdict.rs  lib.rs
backend/docs/: openapi.json
backend/server/: Cargo.toml
backend/server/src/: application.rs  configuration.rs  database.rs  lib.rs  telemetry.rs  util.rs
backend/server/src/routes/: dto.rs  health_check.rs  mod.rs  multi_choice.rs
backend/server/src/routes/game/: mod.rs
backend/server/src/routes/game/multi_choice/: mod.rs  model.rs  multi_choice.rs
backend/server/tests/api/: helpers.rs  root.rs
backend/server_derive/: Cargo.toml
backend/server_derive/src/: dto_to_domain.rs  lib.rs  response_error.rs  to_response_error.rs
backend/server_derive/tests/: dto_to_domain.rs
backend/static/: JLPTWords-1.4.json
backend/xtask/: Cargo.toml
backend/xtask/src/: main.rs
configuration/: local.yaml
dictionary/src/: lib.rs
frontend/: .prettierrc  components.json  eslint.config.ts  orval.config.ts  package.json  tsconfig.json  vite.config.ts
frontend/src/: routeTree.gen.ts  router.tsx
frontend/src/api/: server.ts
frontend/src/api/model/: gameMode.ts  getGame200.ts  getGameParams.ts  getMultiChoice200.ts  getMultiChoiceParams.ts  index.ts  multiChoiceQuestion.ts  nLevelDto.ts  partOfSpeechCategoryDto.ts  senseDto.ts  wordDto.ts
frontend/src/api/mutator/: custom-axios.ts  custom-instance.ts
frontend/src/components/hooks/: QueryClientProvider.tsx  ThemeProvider.tsx
frontend/src/components/ui/: button.tsx  card.tsx  combobox.tsx  field.tsx  input-group.tsx  input.tsx  select.tsx  textarea.tsx
frontend/src/lib/: models.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/game/-components/: InGameLayout.tsx  Stats.tsx
frontend/src/routes/game/-hooks/: useQuiz.tsx  useTimer.tsx
frontend/src/routes/game/-lib/: models.ts  utils.ts
frontend/src/routes/game/multiple-choice/: index.tsx
frontend/src/routes/game/multiple-choice/-components/: CreateGameMenu.tsx  CreateMultiChoiceGame.tsx  Game.tsx  MultiChoiceGame.tsx  MultiChoiceStats.tsx
frontend/src/routes/game/multiple-choice/-hooks/: useGameMutation.ts
frontend/src/styles/: app.css
server/: Cargo.toml
server/src/: configuration.rs  main.rs
xtask/src/: main.rs
