[workspace]
resolver = "3"
members = ["dictionary",
    "server", "xtask",
]

[workspace.dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
