[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = "0.8.9"
config = "0.15.22"
dotenvy = "0.15.7"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-rustls-ring-webpki", "migrate"] }
thiserror = { workspace = true }
tokio = { version = "1.52.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = { version = "0.1.44" }
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ulid = "1.2.1"
uuid = { version = "1.23.1", features = ["v7"] }

[dev-dependencies]
reqwest = "0.13.2"
