[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
config = "0.15.22"
dictionary = { path = "../dictionary" }
dotenvy = "0.15.7"
http = { workspace = true }
rand = "0.10.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { workspace = true }
server_derive = { path = "../server_derive/" }
sqlx = { version = "0.8.6", features = [
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls-ring-webpki"
] }
thiserror = { workspace = true }
tokio = { version = "1.52.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { workspace = true }
ulid = "1.2.1"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
uuid = { version = "1.23.1", features = ["v7"] }

[dev-dependencies]
reqwest = "0.13.2"
